--- a/source/_posts/方舟编译器使用测试.md
+++ b/source/_posts/方舟编译器使用测试.md
@@ -35,4 +35,5 @@ jbc2mpl -mplt java-core.mplt -injar Test.jar -out Test
 maple --run=me:mpl2mpl --option="--quiet:--quiet --regnativefunc --maplelinker" Test.mpl --save-temps
 # 编译.VtableImpl.mpl文件，生成后端优化后的汇编文件(.VtableImpl.s)。
 mplcg --fpic --maplelinker --no-pie --quiet --verbose-asm Test.VtableImpl.mpl
+# 后续用android ndk可以把.s文件编译出能在安卓上运行的程序, 因为汇编的原因， linux的GCC是编译不了的
 ```
