--- a/source/_posts/方舟编译器使用测试.md
+++ b/source/_posts/方舟编译器使用测试.md
@@ -12,6 +12,7 @@ permalink: ark-test-axample
 ### 准备工作
 1. [下载java-core.jar](https://gitee.com/mirrors/java-core)
 2. 需要安装docker
+3. docker镜像 `daocloud.io/ystyle/ark` [方舟镜像编译教程](https://ystyle.top/2019/09/06/compile-ark/)
 
 ### 准备java代码
 ```java
